<package format="2">
  <name>multi_voxels</name>
  <version>0.0.1</version>
  <description>The multi_voxels package</description>
  <maintainer email="tavu@ics.uoc.gr">tavu</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>smoothnet_3d</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>smoothnet_3d</exec_depend>
    
  <exec_depend>libpcl-all</exec_depend>
  
  <test_depend>rostest</test_depend>
</package>
